# IsoBase

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-cn.md  environment.yml  pyproject.toml
.conda/: recipe.yaml
.gemini/: GEMINI.md
.github/workflows/: conda-release.yml
ark/core/: image_service.py  logger.py
ark/llm/: README.md  README.zh-cn.md  __init__.py  entities.py
ark/llm/providers/: __init__.py  anthropic_messages.py  base.py  openai_chat.py
ark/llm/tools/: __init__.py  base.py
ark/locale/: README.md  README.zh-cn.md  __init__.py  phone.py
ark/utils/: json_fixer.py
docs/: developer.md  developer.zh-cn.md
docs/design/: overload_vs_dispatch.md
isobase/: __init__.py
isobase/core/: __init__.py  file_system.py  logger.py
isobase/llm/: README.md  README.zh-cn.md  __init__.py  callbacks.py  entities.py
isobase/llm/providers/: __init__.py  anthropic_messages.py  base.py  openai_chat.py
isobase/llm/tools/: __init__.py  base.py  search.py
isobase/locale/: README.md  README.zh-cn.md  country.py  locale_manager.py
isobase/utils/: __init__.py
isobase/workflow/: README.md  __init__.py  config.py  database.py  workflow.py
test/core/: test_file_system.py  test_logger.py
test/llm/: __init__.py  test_callbacks.py  test_search_tool.py
test/llm/live/: .env.example  __init__.py  run_agent_complex.py  run_agent_search.py  run_agent_tracer.py  run_live.py  run_live_agent_search.py  run_live_agent_search_with_tracer.py  run_live_complex_tools.py  (+3 more)
test/locale/: __init__.py  test_country.py  test_locale_manager.py  test_phone.py
test/workflow/: pseudo_api.py  test_workflow.py
(+13 files in other folders)
