[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isobase"
version = "0.1.2"
description = "Isomorphic Base (IsoBase) is a Python automation framework built around a JSON-driven workflow engine with AI/LLM integration."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "SwordJack", email = "49801226+SwordJack@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats :: JSON",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "annotated-types>=0.6.0",
    "anthropic>=0.85.0",
    "colorlog>=6.9.0",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "packaging>=24.2",
    "phonenumbers>=8.13.49",
    "pillow>=12.1.0",
    "pydantic>=2.11.9",
    "pycountry>=24.6.1",
    "pyyaml>=6.0.3",
    "regex>=2026.5.9",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.37",
    "tavily-python>=0.7.26",
]

[project.urls]
Homepage = "https://github.com/landspark/IsoBase"
Repository = "https://github.com/landspark/IsoBase"

[tool.hatch.build.targets.wheel]
packages = ["isobase"]
